Getting email list on Signup working (NOT DONE)
Still not completed..but in progress - Need help combining index...

Created New ER Diagram

--- a/css/style.css
+++ b/css/style.css
@@ -183,3 +183,20 @@ form button[type=submit]{
 	max-width:	400px; 
 	max-height:	450px;
 }
+.usertypelabel
+{
+	width: 5em; 
+	margin: auto;  
+	text-align: auto; 
+	border: 1px solid red; 
+}
+.usertypebox
+{
+	height: 	30px;
+	width:	30px;
+	font-size: 10px;
+	/*height: 	30px;
+	width:		250px;
+	font-size:	18px;
+	*/ 
+}
