--- a/Final Commit/Studiocracy/css/profilecss.css
+++ b/Final Commit/Studiocracy/css/profilecss.css
@@ -8,7 +8,7 @@
 	margin: 		0px;
 	width:			1280px;
 	color:			white;
-	background:		#7E7E7E;
+	background:		black;
 	font-size:		30px;
 	border-bottom:		3px solid goldenrod;
 }
@@ -17,7 +17,7 @@
 body {
 	margin: 			auto;
 	width: 				1280px;
-	background:			#7E7E7E;
+	background:			black;
 }
 
 
@@ -168,7 +168,7 @@ form input[type=search]{
        
                  
 footer {
-	background: 			#7E7E7E;
+	background: 			black;
 	color:				white;
 }               
           
