--- a/Final Commit/Studiocracy/css/style.css
+++ b/Final Commit/Studiocracy/css/style.css
@@ -6,7 +6,7 @@
 body {
 	margin: 		auto;
 	width: 			1280px;
-	background:		#7E7E7E;
+	background:		black;
 }
 
 h1,h2{
@@ -26,7 +26,7 @@ hr {
 	margin: 		0px;
 	width:			1280px;
 	color:			white;
-	background:		#7E7E7E;
+	background:		#black;
 	font-size:		30px;
 	border-bottom:		3px solid goldenrod;
 }
