--- a/Final Commit/Studiocracy/css/styles.css
+++ b/Final Commit/Studiocracy/css/styles.css
@@ -8,7 +8,7 @@ body {
 	margin: 		auto;
 	width: 			1280px;
 	background:		#7E7E7E;
-	color:			Black;
+	color:			black;
 }
 
 table {
@@ -25,7 +25,7 @@ h1,h2{
 	margin: 		0px;
 	width:			1280px;
 	color:			white;
-	background:		#7E7E7E;
+	background:		black;
 	font-size:		30px;
 	border-bottom:		3px solid goldenrod;
 }
