--- a/Final Commit/Studiocracy/css/editAccount.css
+++ b/Final Commit/Studiocracy/css/editAccount.css
@@ -52,7 +52,7 @@ table {
 	border:				5px solid goldenrod;
 	margin-top:			5px;
 	padding-left:			5px;
-	background-color:		#FFFFE0;
+	background-color:		black;
 	box-shadow:			5px 5px 3px 3px	rgba(128,128,128,.4);
 	padding:			10px;
 }
