--- a/Final Commit/Studiocracy/css/style.css
+++ b/Final Commit/Studiocracy/css/style.css
@@ -17,7 +17,7 @@ hr {
 	height:			2px;
 	border-width:		0px;
 	color:			gray;
-	background-color:	gray;
+	background-color:	black;
 	width:			95%;
 }
 
@@ -26,7 +26,7 @@ hr {
 	margin: 		0px;
 	width:			1280px;
 	color:			white;
-	background:		#black;
+	background:		black;
 	font-size:		30px;
 	border-bottom:		3px solid goldenrod;
 }
@@ -85,7 +85,7 @@ form input[type=search]{
 }
 
 #email, #listing{
-	background:		#7E7E7E;
+	background:		#C0C0C0;
 	color:			white;
 	padding:		100px 0px 20px 0px;	
 }
