--- a/Final Commit/Studiocracy/css/style.css
+++ b/Final Commit/Studiocracy/css/style.css
@@ -85,7 +85,7 @@ form input[type=search]{
 }
 
 #email, #listing{
-	background:		#C0C0C0;
+	background:		#191970;
 	color:			white;
 	padding:		100px 0px 20px 0px;	
 }
