Remade splash page. MailChimp integration. Favicons, new imgs, SEO, social media integration.

--- a/Final Commit/Studiocracy/css/style.css
+++ b/Final Commit/Studiocracy/css/style.css
@@ -85,7 +85,7 @@ form input[type=search]{
 }
 
 #email, #listing{
-	background:		#191970;
+	background:		#7E7E7E;
 	color:			white;
 	padding:		100px 0px 20px 0px;	
 }
